<resources>
    <string name="app_name">UnicornQuartett</string>
    <string name="PlayGame">Play</string>
    <string name="PlayGame1">Play (1)</string>
    <string name="PlayGame2">Play (2)</string>
    <string name="RangList">Highscore</string>
    <string name="Friend">Friends</string>
    <string name="DeckGallery">Deck Gallery</string>
    <string name="Profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="googlePlay">G-Play</string>
    <string name="standardGame">Standard Game</string>
    <string name="playUnicorn">Unicorn Mode</string>
    <string name="Online">online</string>
    <string name="OfflineMode">OfflineMode</string>
    <string name="createTitle">Enter username:</string>
    <string name="createTitleInput">UnicornHunter69</string>
    <string name="createPhoto">Choose or take a profile picture.</string>
    <string name="UnicornMode">UnicornMode</string>
    <string name="StandardMode">StandardMode</string>
    <string name="Load">Loading content</string>
    <string name="Status">Status</string>
    <string name="supriseButton">Suprise</string>
    <string name="resumeUnicorn">Resume Unicorn</string>
    <string name="resumeStandard">Resume Standard</string>
    <string name="good">Such wow. Much skills. Get youself an icecream.</string>
    <string name="medium">Seriously. Much too learn you have Kevin.</string>
    <string name="bad">You should just throw your phone away and cry.</string>
</resources>
