<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.PlayGame.PlayGameActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/PlayGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playStandard"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/roundbutton"
        android:text="@string/playUnicorn"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playUnicorn"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/roundbutton"
        android:text="@string/standardGame"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/onlineOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="52dp"
        android:background="#f269a9"
        android:text="@string/Online"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileButton"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/geilesau"
        android:onClick="goToProfileActivity"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="230dp"
        android:layout_height="26dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/OnlineOfflineText"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="108dp"
        android:text="@string/OfflineMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
