<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.Menu.MenuActivity">

    <Button
        android:id="@+id/playbutton"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/roundbutton"
        android:onClick="goToPlayGameActivity"
        android:text="@string/PlayGame"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deckbutton"
        style="@style/Friends"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/roundbutton"
        android:onClick="goToDeckGalleryActivity"
        android:text="@string/DeckGallery"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ranglisbutton"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/roundbutton"
        android:onClick="goToRangListActivity"
        android:text="@string/RangList"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friendButton"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/roundbutton"
        android:onClick="goToFriendActivity"
        android:text="@string/Friend"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileButton"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/geilesau"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="230dp"
        android:layout_height="26dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
